[package]
name = "app"
version = "0.1.0"
description = "MQTT client"
authors = ["David AAberg"]
license = "GPLv3"
repository = "https://github.com/freke/MQTTify"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [] }
lifetime-thread = "0.3"
tokio = "1.36"
rumqttc = "0.24"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "0.26.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
